http://winmerge.org/tracker/[tracker-id]

WinMerge 2.10.4
  Add Git to Source Control filter and fix ignore file rules (#2329381)
  Bugfix: Move confirmation dialog sometimes had wrong paths (#2327565, #2309190)
  Bugfix: Use translated version of readme.txt for Chinese Simplified (#2391000)
  Bugfix: Installer didn't install readme.txt for all translations (#2396437)
  Translation updates:
  - Swedish (#2236651)

WinMerge 2.10.2 - 2008-11-06 (r6075)
  Change download URL to current URL (#2136765)
  Installer: create backup of ClearCase config file (#2129095)
  Release notes update (#2222871)
  BugFix: Case-sensitive regexp search didn't work (#1991259)
  BugFix: Wrong cursor position when disabling selection margin (#2138555)
  BugFix: Showed a black line when disabling selection margin (#2068790)
  BugFix: Fix manual URL in Readme.txt (#2181628)
  BugFix: There were some installer regressions
         (eg. Installer didn't create Quick Launch icon) (#1460517)
  BugFix: Giving path to file and folder to command line
   did not work (#2138560)
  BugFix: If messagebox was shown during file loading location pane
    didn't show any differences (#2101780)
  BugFix: Some calls made to plugins when plugins were disabled (#2182788)
  New translation: Galician (#2120685)
  Translation updates:
  - Czech (r6038)
  - Swedish (#2227131)
  - Ukrainian (#2131753)

WinMerge 2.10 - 2008-09-17 (r5967)
  Change Manual url to http://winmerge.org/docs/manual/ (r5957)
  Manual updates
  Changelog update (#2114998)
  BugFix: Customized colors weren't used in some areas (#2110218)
  BugFix: Zip files were extracted into wrong folder (#2110350)

WinMerge 2.10 RC - 2008-09-09 (r5933)
  Add icon for "Plugins->List" menu item (#2060771)
  Use external editor to edit file filters (#2082774)
  Improved command line handling (#2081779)
  Release notes update(#2099303)
  Plugins: Show processing instructions in XML plugin (#1979321)